Blue-Green-Deployment-master-k8s/Poc-Blue-Green-Croma/Yaml-blue/omnicore-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnicore-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omnicore
      version: v2
  template:
    metadata:
      labels:
        app: omnicore
        version: v2
    spec:
      containers:      
      - name: omnicore
        image: omnistoreimages.azurecr.io/omnicoregreen:example
        
        imagePullPolicy: Always
        volumeMounts:
        - name: azurefileshare
          mountPath: /opt/omnistore-home/logs
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 2050Mi
        ports:
        - containerPort: 8163
      imagePullSecrets:
      - name: imagepull
      volumes:
        - name: azurefileshare
          azureFile:
            secretName: microservice
            shareName: cs-1820387-tcs-com-1003200094f9c116/blue-green/logs
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: omnicore-green
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8163
  selector:
    app: omnicore
    version: v2
